--- a/index.html
+++ b/index.html
@@ -4,64 +4,27 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script> 
+        
         <script type="text/javascript" src="mapa.js"></script>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     	<script type="text/javascript" charset="utf-8" src="camera.js"></script>
+        <script type="text/javascript" charset="utf-8" src="device.js"></script>
         
 		<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"></script> 
 	   	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css" /> 
 		<script type="text/javascript">
+		
 		$(document).ready(function(e) {
             navigator.geolocation.getCurrentPosition(saveLocal);
         });
 		
-		/*<!--------
-		var x=document.getElementById("demo");
-function getLocation()
-  {
-  if (navigator.geolocation)
-    {
-    navigator.geolocation.getCurrentPosition(showPosition);
-    }
-  else{x.innerHTML="Geolocation is not supported by this browser.";}
-  }
-function showPosition(position)
-  {
-  x.innerHTML="Latitude: " + position.coords.latitude + 
-  "<br>Longitude: " + position.coords.longitude; 
-  }
-		<!--------
-		function showPosition(position)
-{
-var latlon=position.coords.latitude+","+position.coords.longitude;
-
-var img_url="http://maps.googleapis.com/maps/api/staticmap?center="
-+latlon+"&zoom=14&size=400x300&sensor=false";
-
-document.getElementById("mapholder").innerHTML="<img src='"+img_url+"'>";
-}
-		<!--------
-		function showError(error)
-  {
-  switch(error.code) 
-    {
-    case error.PERMISSION_DENIED:
-      x.innerHTML="User denied the request for Geolocation."
-      break;
-    case error.POSITION_UNAVAILABLE:
-      x.innerHTML="Location information is unavailable."
-      break;
-    case error.TIMEOUT:
-      x.innerHTML="The request to get user location timed out."
-      break;
-    case error.UNKNOWN_ERROR:
-      x.innerHTML="An unknown error occurred."
-      break;
-    }
-  }
-		<!--------
-*/		
-
+		
+		
+		<!---- Verificar Conexão ----->
+         function connection() {
+            checkConnection();
+         }
+		
 </script>
 </head>
 <body>
@@ -77,6 +40,7 @@ document.getElementById("mapholder").innerHTML="<img src='"+img_url+"'>";
             <img style="display:none;width:300px;height: 300px;" id="smallImage" src="" />
     		<img style="display:none;" id="largeImage" src="" />
             <a href="mostra" data-role="button">mostra</a>
+            <p id="deviceProperties">Loading device properties...</p>
             </div>
             <div data-role="footer">
 				<p>Rodapé</p>
